@@ -245,6 +245,7 @@ enum {
   E_ALIGNAS                     = 216, /* invalid alignment specified */
   W_INTERNAL_ERROR              = 217, /* warning for non-fatal internal errors - things that should not have happened, but can be handled */
   W_UNRECOGNIZED_ASM            = 218, /* unrecognized asm instruction in peephole optimizer */
+  W_FLEXARRAY_INSTRUCT          = 219, /* using flexible arrays in a struct */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
